--- a/BSHomeWork4/all.css
+++ b/BSHomeWork4/all.css
@@ -21,7 +21,7 @@
 }
 
 .adv-title h2::after {
-    content: '';
+    content: "";
     width: 50px;
     height: 5px;
     background-color: #000;
@@ -29,12 +29,6 @@
 
 .adv-boxing {
     margin-bottom: 150px;
-}
-
-.adv-boxing nav span {
-    border: 1px solid gray;
-    padding: 10px 20px;
-    cursor: pointer;
 }
 
 .adv-boxing nav span~span {
@@ -77,7 +71,7 @@
 }
 
 .text p::before {
-    content: '●';
+    content: "●";
     color: red;
 }
 
@@ -88,6 +82,37 @@
     align-items: center;
     position: relative;
     margin-bottom: 100px;
+}
+
+/* hover效果 */
+.adv-boxing nav span {
+    border: 1px solid gray;
+    padding: 10px 20px;
+    cursor: pointer;
+
+    position: relative;
+    z-index: 1;
+    transition: 0.5s;
+}
+
+.five-adv nav span::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s;
+    background-color: brown;
+    z-index: -1;
+}
+
+.five-adv nav span:hover::after {
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+
 }
 
 /* 動畫疊層圖牆 */
@@ -105,7 +130,6 @@
     z-index: -1;
     margin-left: 50%;
     margin-bottom: -22%;
-
 }
 
 .adv-wall-right .info {
@@ -144,7 +168,6 @@
     margin-left: -25%;
 }
 
-
 /* 動畫疊層圖牆 left */
 
 .adv-wall-left .info-title {
@@ -161,7 +184,6 @@
     z-index: -1;
     margin-left: 20%;
     margin-bottom: -35%;
-
 }
 
 .adv-wall-left .info {
