--- a/BSHomeWork4/all.css
+++ b/BSHomeWork4/all.css
@@ -57,6 +57,20 @@
 .text-title {
     color: #e00;
     padding: 20px 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.text-title::after {
+    content: "";
+    width: 55px;
+    height: 5px;
+    display: block;
+    background-color: red;
+    flex-grow: 2;
+    margin-left: 1em;
 }
 
 .text>h3 {
