RWD追加768-1200的排版

--- a/BSHomeWork5/all.css
+++ b/BSHomeWork5/all.css
@@ -344,8 +344,8 @@ div[class^="col-"] {
 }
 
 
-/* 桌機以下 */
-@media screen and (max-width: 1199px) {
+/* 手機以下 */
+@media screen and (max-width: 767px) {
     .col-1 {
         width: 8.333333%;
     }
@@ -529,68 +529,56 @@ div[class^="col-"] {
     }
 }
 
-/* 桌機 */
-@media screen and (min-width: 1200px) {
-    .col-xl-1 {
+/* 手機以上 */
+
+@media screen and (min-width:768px) {
+    .col-md-1 {
         width: 8.333333%;
     }
 
-    .col-xl-2 {
+    .col-md-2 {
         width: 16.666666%;
     }
 
-    .col-xl-3 {
+    .col-md-3 {
         width: 25%;
     }
 
-    .col-xl-4 {
+    .col-md-4 {
         width: 33.333333%;
     }
 
-    .col-xl-5 {
+    .col-md-5 {
         width: 41.666666%;
     }
 
-    .col-xl-6 {
+    .col-md-6 {
         width: 50%;
     }
 
-    .col-xl-7 {
+    .col-md-7 {
         width: 58.333333%;
     }
 
-    .col-xl-8 {
+    .col-md-8 {
         width: 66.666666%;
     }
 
-    .col-xl-9 {
+    .col-md-9 {
         width: 75%;
     }
 
-    .col-xl-10 {
+    .col-md-10 {
         width: 83.333333%;
     }
 
-    .col-xl-11 {
+    .col-md-11 {
         width: 91.666666%;
     }
 
-    .col-xl-12 {
+    .col-md-12 {
         width: 100%;
     }
-
-    .header {
-        width: 1200px;
-        margin: auto;
-        position: relative;
-    }
-
-    .container {
-        width: 1200px;
-        margin: auto;
-    }
-
-    /* 導覽列 */
 
     .header .container {
         display: flex;
@@ -692,4 +680,67 @@ div[class^="col-"] {
         display: flex;
         justify-content: space-between;
     }
+}
+
+/* 桌機以上 */
+@media screen and (min-width: 1200px) {
+    .col-xl-1 {
+        width: 8.333333%;
+    }
+
+    .col-xl-2 {
+        width: 16.666666%;
+    }
+
+    .col-xl-3 {
+        width: 25%;
+    }
+
+    .col-xl-4 {
+        width: 33.333333%;
+    }
+
+    .col-xl-5 {
+        width: 41.666666%;
+    }
+
+    .col-xl-6 {
+        width: 50%;
+    }
+
+    .col-xl-7 {
+        width: 58.333333%;
+    }
+
+    .col-xl-8 {
+        width: 66.666666%;
+    }
+
+    .col-xl-9 {
+        width: 75%;
+    }
+
+    .col-xl-10 {
+        width: 83.333333%;
+    }
+
+    .col-xl-11 {
+        width: 91.666666%;
+    }
+
+    .col-xl-12 {
+        width: 100%;
+    }
+
+    .header {
+        width: 1200px;
+        margin: auto;
+        position: relative;
+    }
+
+    .container {
+        width: 1200px;
+        margin: auto;
+    }
+
 }
