--- a/BSHomeWork6/all.scss
+++ b/BSHomeWork6/all.scss
@@ -22,13 +22,15 @@
     }
 }
 
-@media (max-width: 991px) {
+@media screen and (max-width: 991px) {
+
     .navbar-collapse {
         position: absolute;
         padding-left: 15px;
         padding-right: 15px;
         padding-bottom: 15px;
-        width: 80%;
+        width: 60%;
+        height: 100vh;
 
         &.collapsing {
             height: auto;
@@ -39,10 +41,23 @@
 
         &.show {
             top: 100%;
-            right: -15px;
-            background-color: red;
+            right: 0;
+
+            background-color: #f8f9fa;
             transition: 0.3s ease-in;
             z-index: 5;
+        }
+    }
+}
+
+@media screen and (min-width:992px) {
+    .carousel {
+        .carousel-inner {
+            .btn {
+                p {
+                    display: inline-block;
+                }
+            }
         }
     }
 }
@@ -55,6 +70,7 @@
             background-size: cover;
             background-position: center;
             height: 700px;
+            position: relative;
 
             &:nth-child(1) {
                 background-image: url(img/slide-1.png), linear-gradient(rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .5)100%);
@@ -93,13 +109,12 @@
             }
 
             .content {
+                position: absolute;
                 color: #fff;
                 text-align: center;
-                width: 300px;
-                margin: auto;
-                margin-top: 10%;
-
-
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
 
                 .btn {
                     a {
