--- a/BSHomeWork7/all.css
+++ b/BSHomeWork7/all.css
@@ -1,27 +1,89 @@
 @charset "UTF-8";
-.navbar .navbar-nav .nav-item > a::before {
-  content: 'o ';
-}
-
 .navbar .navbar-nav .dropdown:hover > .dropdown-menu {
   display: block;
 }
 
-.navbar .navbar-nav .dropdown .dropdown-menu > a::before {
+.navbar .navbar-nav:first-child .nav-item > a::before {
+  content: 'o ';
+}
+
+.navbar .navbar-nav:first-child .dropdown .dropdown-menu > a::before {
   content: '▪ ';
+}
+
+.navbar .navbar-nav:nth-child(2) img {
+  width: 18px;
+}
+
+.carousel .carousel-inner .carousel-item {
+  height: 100vh;
+}
+
+.carousel .carousel-inner .carousel-item .carousel-caption {
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.carousel .carousel-inner .carousel-item .carousel-caption h5 {
+  font-size: 40px;
+}
+
+.carousel .carousel-inner .carousel-item .carousel-caption h1 {
+  font-size: 150px;
+}
+
+.carousel .carousel-inner .carousel-item .carousel-caption a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 40px;
+  border: 2px solid #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel .carousel-inner .carousel-item .carousel-caption a:hover {
+  background-color: #fff;
+  color: #000;
 }
 
 .card .item {
   overflow: hidden;
 }
 
-.card .item:hover > img {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+.card .item img {
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
-.card .item:hover > .card-img-overlay {
-  color: red;
+.card .item .card-img-overlay span {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0);
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.card .item .card-img-overlay span img {
+  opacity: 0;
+}
+
+.card .item:hover > img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: .5;
+}
+
+.card .item:hover > .card-img-overlay span {
+  color: black;
+}
+
+.card .item:hover > .card-img-overlay span.price {
+  color: #aa0000;
+}
+
+.card .item:hover > .card-img-overlay span img {
+  opacity: 1;
 }
 
 .space {
